@@ -16,6 +16,7 @@ Now
  * Fix overflow in aggregation.
  * Append ST_DIRS parameter.
  * Append ST_AREA parameter.
+ * Print world map.
 
 Version 0.0.0.9 2010-12-30
  * Remove check for equality in mutation and crossover because it can break good ADF.
